# AI

./: CMakeLists.txt  RTT日志查看指南.md  debug_temp.jlink  get_jlink_info.ps1  start_rtt.jlink  temp_rtt_connect.jlink  toolchain-arm-none-eabi.cmake  工程构建注意事项.md
common/: CMakeLists.txt  readme.md
common/cmsis/src/: syscalls.c
project/: CMakeLists.txt
project/inc/: at32f435_437_board.h
project/rttview/: SEGGER_RTT_printf.c  debug_log.h
project/src/: at32f435_437_int.c  main.c
script/: build.bat  flash.jlink  jlink_rtt.ps1  rtt-config.json  rtt-config.json.example  rtt_view.bat
